--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 page</title>
 </head>
 <body>
-  DEMO  
+  <main>
+      <div>
+          <h1>404</h1>
+          <p>Page not found</p>
+          <a href="#">Go to home</a>
+      </div>
+      <img src="#" alt="UFO lekste">
+  </main>
 </body>
 </html>
