--- a/index.html
+++ b/index.html
@@ -7,13 +7,50 @@
     <title>404 page</title>
 </head>
 <body>
-  <main>
-      <div>
-          <h1>404</h1>
-          <p>Page not found</p>
-          <a href="#">Go to home</a>
+  <main style= "width: 70%; margin-left: 15%; margin-top: 10%; display: inline-block;">
+      <div style="width: 50%; float: left;">
+          <h1 style="font-size: 100px; color: aqua;">404</h1>
+          <p style="font-size: 50px;">Page not found</p>
+          <a style="font-size: 20px; text-decoration: none; color: aqua; border: 2px solid red;" href="#">Go to home</a>
       </div>
-      <img src="#" alt="UFO lekste">
+      <img src="ufo.png" alt="UFO lekste" style="width: 50%; float: left;">
   </main>
 </body>
 </html>
+
+
+<!-- 
+Stiliaus taisykles sablonas:
+sytle="taisykle; taisykle; taisykle;"
+
+Taisykles sablonas:
+taisykles-pavadinimas: taisykles-verte;
+pvz.:
+background-color: red;
+font-size: 14px;
+display: none;
+
+pilnas variniantas:
+style="background-color: red; font-size: 14px; display: none;"
+
+
+
+elementu tarpusavyje atsistumimas:
+margin: 30px;
+margin-top: 30px;
+margin-right: 30px;
+margin-bottom: 30px;
+margin-left: 30px;
+
+Can go with %, px....
+
+elementu atvaizdavimo budas:
+display: none;                  nerodyti.
+display: block;                 rodyti vienas zemiau kito (90% default).
+display: inline;                 rodyti vienas salia kito, su galimybe  nusikelti i kita eilute (5% default).
+display: inline-block;          rodyti vienas salia kito, jei telpa, o jei ne, tai is naujos.
+
+
+
+
+ -->
