borders and space update

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <main style= "width: 70%; margin-left: 15%; margin-top: 10%; display: inline-block;">
       <div style="width: 50%; float: left;">
-          <h1 style="font-size: 100px; color: aqua;">404</h1>
-          <p style="font-size: 50px;">Page not found</p>
-          <a style="font-size: 20px; text-decoration: none; color: aqua; border: 2px solid red;" href="#">Go to home</a>
+          <h1 style="font-size: 100px; margin-bottom: 5px; color: aqua;">404</h1>
+          <p style="font-size: 50px; margin-top: 5px;">Page not found</p>
+          <a style="font-size: 20px; text-decoration: none; color: aqua; border-radius: 20px; border: 2px solid red; " href="#">Go to home</a>
       </div>
       <img src="ufo.png" alt="UFO lekste" style="width: 50%; float: left;">
   </main>
