--- a/index.html
+++ b/index.html
@@ -6,51 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 page</title>
 </head>
-<body>
+<body >
   <main style= "width: 70%; margin-left: 15%; margin-top: 10%; display: inline-block;">
-      <div style="width: 50%; float: left;">
-          <h1 style="font-size: 100px; margin-bottom: 5px; color: aqua;">404</h1>
-          <p style="font-size: 50px; margin-top: 5px;">Page not found</p>
-          <a style="font-size: 20px; text-decoration: none; color: aqua; border-radius: 20px; border: 2px solid red; " href="#">Go to home</a>
+      <div style="width: 50%; float: left;  " >
+          <h1 style="font-size: 100px; margin-bottom: 0; color: #279BF3; font-family: Verdana, Geneva, Tahoma, sans-serif;  ">404</h1>
+          <p style="font-size: 40px; margin-top: 0; margin-bottom: 50px; text-transform: uppercase; font-weight: bold; color: #5F5F5F; ">Page not found</p>
+          <a style="font-size: 20px; text-decoration: none; color: #279BF3; padding: 8px 30px; border-radius: 30px; border: 2px solid #279BF3; " href="#">Go to home</a>
       </div>
       <img src="ufo.png" alt="UFO lekste" style="width: 50%; float: left;">
   </main>
 </body>
 </html>
-
-
-<!-- 
-Stiliaus taisykles sablonas:
-sytle="taisykle; taisykle; taisykle;"
-
-Taisykles sablonas:
-taisykles-pavadinimas: taisykles-verte;
-pvz.:
-background-color: red;
-font-size: 14px;
-display: none;
-
-pilnas variniantas:
-style="background-color: red; font-size: 14px; display: none;"
-
-
-
-elementu tarpusavyje atsistumimas:
-margin: 30px;
-margin-top: 30px;
-margin-right: 30px;
-margin-bottom: 30px;
-margin-left: 30px;
-
-Can go with %, px....
-
-elementu atvaizdavimo budas:
-display: none;                  nerodyti.
-display: block;                 rodyti vienas zemiau kito (90% default).
-display: inline;                 rodyti vienas salia kito, su galimybe  nusikelti i kita eilute (5% default).
-display: inline-block;          rodyti vienas salia kito, jei telpa, o jei ne, tai is naujos.
-
-
-
-
- -->
